# httptester

./: .gitignore  Dockerfile  init.sh  kette-uninstall.sh  kette.sh  mesh.md  meshv2.excalidraw  pyproject.toml  readme.md  requirements.txt  server-flask.py  server.py  service.sh
.github/workflows/: docker-publish.yml
accesslogs/: server.py  table.py
diagrams/: gateways.excalidraw  gateways.md  mesh.excalidraw  mesh.md
egress/: readme.md
eurekaclient/: Dockerfile  README.md  client.py  client_with_metrics.py  eureka_client_lib.py  metrics_exporter.py  services.json
eurekaclient/example/: delete.http  get.http  readme.md  register.http  service.json  service.xml
features/: environment.py  httptester.feature
features/steps/: httptester_steps.py
k3s-airgap/: airgap.md
kind/: cleanup.sh  clusters.sh  httpbin.sh  ips.sh  istio-download.sh  istio.sh  mesh.sh  metallb.sh  readme.md  run.sh  sysctlfix.sh
static/: style.css
tekton/: dockerhub.md  pipeline.yaml  pipelinerun.yaml
templates/: index.html
tester-chart/: Chart.yaml  httptester-helmchart.md  values.yaml
tester-chart/templates/: deployment.yaml  gateway.yaml  service.yaml  virtualservice.yaml
vlan/: vlan.md
