[project]
name = "httptester"
version = "0.1.0"
description = "http tester tool for get and dns requests"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "behave>=1.3.3",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
